# 11globalForegroundWindow

./: .gitignore  11globalForegroundWindow.c  11globalForegroundWindow.m  11globalForegroundWindow.maxpat  11globalForegroundWindow.sln  11globalForegroundWindow.vcxproj  CMakeLists.txt  README.md
11globalForegroundWindow.xcodeproj/: project.pbxproj
11globalForegroundWindow.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
11globalForegroundWindow.xcodeproj/project.xcworkspace/xcuserdata/admin.xcuserdatad/: UserInterfaceState.xcuserstate
11globalForegroundWindow.xcodeproj/project.xcworkspace/xcuserdata/einseinsolsen.xcuserdatad/: UserInterfaceState.xcuserstate
11globalForegroundWindow.xcodeproj/xcuserdata/admin.xcuserdatad/xcschemes/: max-external.xcscheme
